bug: no longer showing tooltip for quickslot with an item in the char ui and made multi element rows (like resistance) use 100% width so it isn't cramped

--- a/src/client/src/ui/templates/equipment/styles.less
+++ b/src/client/src/ui/templates/equipment/styles.less
@@ -99,6 +99,7 @@
 							display: flex;
 							flex-direction: column;
 							gap: 8px;
+							width: 100%;
 
 							.elemental-heading {
 								color: @white;
